// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransformJourneyPlugin alias import specifier 1`] = `
"import { journey as x } from '@elastic/synthetics';

x('j1', () => {});"
`;

exports[`TransformJourneyPlugin alias import specifier 2`] = `
"import { journey as x } from '@elastic/synthetics';


x('j2', () => {});"
`;

exports[`TransformJourneyPlugin alias import specifier 3`] = `
"import { journey as x } from '@elastic/synthetics';

x('j1', () => {});
x('j2', () => {});"
`;

exports[`TransformJourneyPlugin dynamic journeys 1`] = `
"import { journey, step, monitor } from '@elastic/synthetics';

journey('j1', () => {});

const createJourney = (name) => {
  journey(name, () => {
    monitor.use({ id: 'duplicate id' });
    step("step1", () => {});
  });
};

createJourney('j2');"
`;

exports[`TransformJourneyPlugin dynamic journeys 2`] = `
"import { journey, step, monitor } from '@elastic/synthetics';



const createJourney = (name) => {
  journey(name, () => {
    monitor.use({ id: 'duplicate id' });
    step("step1", () => {});
  });
};

createJourney('j2');"
`;

exports[`TransformJourneyPlugin dynamic journeys 3`] = `
"import { journey, step, monitor } from '@elastic/synthetics';

journey('j1', () => {});

const createJourney = (name) => {
  journey(name, () => {
    monitor.use({ id: 'duplicate id' });
    step("step1", () => {});
  });
};

createJourney('j2');"
`;

exports[`TransformJourneyPlugin static journeys 1`] = `
"import { journey, step, monitor } from '@elastic/synthetics';
journey('j1', () => {
  monitor.use({ id: 'duplicate id' });
});

function util() {}"
`;

exports[`TransformJourneyPlugin static journeys 2`] = `
"import { journey, step, monitor } from '@elastic/synthetics';




function util() {}

journey('j2', () => {});"
`;

exports[`TransformJourneyPlugin static journeys 3`] = `
"import { journey, step, monitor } from '@elastic/synthetics';
journey('j1', () => {
  monitor.use({ id: 'duplicate id' });
});

function util() {}

journey('j2', () => {});"
`;
